deploy: julianbrooks/comp2850-hci-mdbook@bd2d078b24febbadc418f5cf6fe579e8614dc24f

--- a/wk09/wk9-lab2-student-guide.html
+++ b/wk09/wk9-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 2: Run Pilots &amp; Draft Task 1 - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Run Pilots &amp; Draft Task 1 - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
