--- a/wk11/wk11-lab1-student-guide.html
+++ b/wk11/wk11-lab1-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 1: Evidence-Led Studio Crit - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Evidence-Led Studio Crit - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
