--- a/wk11/wk11-lab2-student-guide.html
+++ b/wk11/wk11-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 2: Wrap-Up, Portfolio &amp; Submission - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Wrap-Up, Portfolio &amp; Submission - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
