--- a/wk06/wk6-lab2-student-guide.html
+++ b/wk06/wk6-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 2: Needs-Finding &amp; Research Ethics - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Needs-Finding &amp; Research Ethics - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
