--- a/wk07/wk7-lab1-student-guide.html
+++ b/wk07/wk7-lab1-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 1: Ethics &amp; Inline Edit - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Ethics &amp; Inline Edit - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
