--- a/wk07/wk7-lab2-student-guide.html
+++ b/wk07/wk7-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 2: Accessibility Audit &amp; Inclusive Fix - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Accessibility Audit &amp; Inclusive Fix - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
