--- a/wk08/wk8-lab2-student-guide.html
+++ b/wk08/wk8-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 2: Validation &amp; No-JS Parity - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Validation &amp; No-JS Parity - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
