--- a/wk09/wk9-lab1-student-guide.html
+++ b/wk09/wk9-lab1-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lab 1: Evaluation Planning &amp; Instrumentation - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Evaluation Planning &amp; Instrumentation - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
