--- a/wk08/wk8-lab1-student-guide.html
+++ b/wk08/wk8-lab1-student-guide.html
@@ -196,6 +196,49 @@
 <blockquote>
 <p><strong>Important</strong>: This code is provided to help you focus on <strong>learning HCI concepts</strong>, not as a shortcut. You must understand the design decisions and document them in Part 3.</p>
 </blockquote>
+<blockquote>
+<p><strong>Week 8 Architecture</strong>: Week 8 uses <code>TaskStore</code> (class) with String UUID IDs instead of Week 7’s <code>TaskRepository</code> (object) with Int IDs. Create the TaskStore first, then add pagination.</p>
+</blockquote>
+<details>
+<summary>Click to reveal: <code>src/main/kotlin/storage/TaskStore.kt</code> (new file)</summary>
+<pre><code class="language-kotlin">package storage
+
+import model.Task
+import java.io.File
+
+/**
+ * Simple in-memory task storage with CSV persistence.
+ * Week 8 uses String UUID IDs.
+ */
+class TaskStore(private val csvFile: File = File("data/tasks.csv")) {
+    private val tasks = mutableListOf&lt;Task&gt;()
+
+    init {
+        if (csvFile.exists()) {
+            // Load tasks from CSV (implement if needed)
+        }
+    }
+
+    fun getAll(): List&lt;Task&gt; = tasks.toList()
+
+    fun getById(id: String): Task? = tasks.find { it.id == id }
+
+    fun add(task: Task) {
+        tasks.add(task)
+    }
+
+    fun update(task: Task): Boolean {
+        val index = tasks.indexOfFirst { it.id == task.id }
+        return if (index != -1) {
+            tasks[index] = task
+            true
+        } else false
+    }
+
+    fun delete(id: String): Boolean = tasks.removeIf { it.id == id }
+}
+</code></pre>
+</details>
 <details>
 <summary>Click to reveal: <code>src/main/kotlin/data/Page.kt</code> (new file)</summary>
 <pre><code class="language-kotlin">package data
@@ -218,15 +261,15 @@ data class Page&lt;T&gt;(
 </code></pre>
 </details>
 <details>
-<parameter name="summary">Click to reveal: Add to <code>TaskRepository</code> object</summary>
+<parameter name="summary">Click to reveal: Add to <code>TaskStore</code> class</summary>
 <pre><code class="language-kotlin">/**
  * Search tasks by title and return paginated results.
  */
 fun search(query: String, page: Int, pageSize: Int = 10): Page&lt;Task&gt; {
     val filtered = if (query.isBlank()) {
-        all()
+        getAll()
     } else {
-        all().filter { task -&gt;
+        getAll().filter { task -&gt;
             task.title.contains(query, ignoreCase = true)
         }
     }
@@ -245,6 +288,7 @@ fun search(query: String, page: Int, pageSize: Int = 10): Page&lt;Task&gt; {
     )
 }
 </code></pre>
+<p><strong>Note</strong>: Add this method to your <code>TaskStore</code> class (not <code>TaskRepository</code>). Week 8 uses TaskStore with String UUID IDs.</p>
 </details>
 <details>
 <summary>Click to reveal: Add to <code>TaskRoutes.kt</code></summary>
@@ -252,7 +296,7 @@ fun search(query: String, page: Int, pageSize: Int = 10): Page&lt;Task&gt; {
 get("/tasks/fragment") {
     val q = call.request.queryParameters["q"]?.trim().orEmpty()
     val page = call.request.queryParameters["page"]?.toIntOrNull() ?: 1
-    val pageData = TaskRepository.search(q, page, 10)
+    val pageData = store.search(q, page, 10)
 
     val list = call.renderTemplate("tasks/_list.peb", mapOf("page" to pageData, "q" to q))
     val pager = call.renderTemplate("tasks/_pager.peb", mapOf("page" to pageData, "q" to q))
@@ -265,7 +309,7 @@ get("/tasks/fragment") {
 get("/tasks") {
     val q = call.request.queryParameters["q"]?.trim().orEmpty()
     val page = call.request.queryParameters["page"]?.toIntOrNull() ?: 1
-    val pageData = TaskRepository.search(q, page, 10)
+    val pageData = store.search(q, page, 10)
 
     val html = call.renderTemplate("tasks/index.peb", mapOf(
         "page" to pageData,
