--- a/wk08/wk8-lab2-routing-nojs-tradeoffs.html
+++ b/wk08/wk8-lab2-routing-nojs-tradeoffs.html
@@ -200,6 +200,49 @@
 <li>Review Week 7 Lab 1 inline edit implementation</li>
 </ul>
 <hr />
+<h2 id="prerequisite-week-8-architecture-string-uuids--taskstore"><a class="header" href="#prerequisite-week-8-architecture-string-uuids--taskstore">Prerequisite: Week 8 Architecture (String UUIDs + TaskStore)</a></h2>
+<p>Week 8 Lab 2 builds on the <strong>Week 8 architecture</strong> introduced in Lab 1. If you completed Lab 1, you should already have:</p>
+<ul>
+<li>✅ <code>model/Task.kt</code> with String UUID IDs</li>
+<li>✅ <code>storage/TaskStore.kt</code> with <code>getById()</code>, <code>add()</code>, <code>update()</code>, <code>delete()</code> methods</li>
+<li>✅ Routes updated to use <code>store.*</code> instead of <code>TaskRepository.*</code></li>
+</ul>
+<p><strong>If you haven’t migrated yet</strong>, complete the architecture transition from Lab 1 first, or see the <a href="wk8-lab2-student-guide.html">Lab 2 Student Guide</a> for complete TaskStore implementation.</p>
+<h3 id="quick-architecture-reference"><a class="header" href="#quick-architecture-reference">Quick Architecture Reference</a></h3>
+<p><strong>Task Model</strong> (<code>model/Task.kt</code>):</p>
+<pre><code class="language-kotlin">data class Task(
+    val id: String = UUID.randomUUID().toString(),
+    val title: String,
+    val completed: Boolean = false,
+    val createdAt: LocalDateTime = LocalDateTime.now()
+)
+</code></pre>
+<p><strong>Key Validation</strong> (Lab 2 adds this to Task companion object):</p>
+<pre><code class="language-kotlin">companion object {
+    const val MIN_TITLE_LENGTH = 3
+    const val MAX_TITLE_LENGTH = 100
+
+    fun validate(title: String): ValidationResult = when {
+        title.isBlank() -&gt; ValidationResult.Error("Title is required.")
+        title.length &lt; MIN_TITLE_LENGTH -&gt; ValidationResult.Error("Title must be at least $MIN_TITLE_LENGTH characters.")
+        title.length &gt; MAX_TITLE_LENGTH -&gt; ValidationResult.Error("Title must be less than $MAX_TITLE_LENGTH characters.")
+        else -&gt; ValidationResult.Success
+    }
+}
+
+sealed class ValidationResult {
+    data object Success : ValidationResult()
+    data class Error(val message: String) : ValidationResult()
+}
+</code></pre>
+<p><strong>Route Pattern Changes from Week 7</strong>:</p>
+<ul>
+<li>❌ <code>call.parameters["id"]?.toIntOrNull()</code> → ✅ <code>call.parameters["id"]</code></li>
+<li>❌ <code>TaskRepository.find(id)</code> → ✅ <code>store.getById(id)</code></li>
+<li>❌ <code>TaskRepository.add(title)</code> → ✅ <code>val task = Task(title = title); store.add(task)</code></li>
+<li>❌ <code>task.title = newTitle</code> (mutable) → ✅ <code>task.copy(title = newTitle)</code> (immutable)</li>
+</ul>
+<hr />
 <h2 id="introduction-from-prototype-to-production-ready"><a class="header" href="#introduction-from-prototype-to-production-ready">Introduction: From Prototype to Production-Ready</a></h2>
 <p>In Week 8 Lab 1 you added pagination and filtering. The basic functionality works: people can browse, filter, and page through tasks.</p>
 <p><strong>Today’s reality check</strong>: What happens when:</p>
@@ -378,7 +421,8 @@ if (title.isBlank()) {
 <p><strong>Current code</strong> (Week 8 Lab 1):</p>
 <pre><code class="language-kotlin">post("/tasks") {
     val title = call.receiveParameters()["title"].orEmpty().trim()
-    val task = repo.add(title)
+    val task = Task(title = title)
+    store.add(task)
     if (call.isHtmx()) {
         val item = PebbleRender.render("tasks/_item.peb", mapOf("t" to task))
         val status = """&lt;div id="status" hx-swap-oob="true"&gt;Added "${task.title}".&lt;/div&gt;"""
@@ -413,7 +457,8 @@ if (title.isBlank()) {
     }
 
     // Success path
-    val task = repo.add(title)
+    val task = Task(title = title)
+    store.add(task)
     if (call.isHtmx()) {
         val item = PebbleRender.render("tasks/_item.peb", mapOf("t" to task))
         val status = """&lt;div id="status" hx-swap-oob="true"&gt;Added "${task.title}".&lt;/div&gt;"""
@@ -459,7 +504,7 @@ if (title.isBlank()) {
     val msg = call.request.queryParameters["msg"]
     val q = call.request.queryParameters["q"].orEmpty()
     val page = call.request.queryParameters["page"]?.toIntOrNull() ?: 1
-    val data = repo.search(q, page)
+    val data = store.search(q, page)
 
     val model = mapOf(
         "title" to "Tasks",
@@ -576,9 +621,9 @@ Success path still works for both</li>
 <p><strong>Update routes</strong> (<code>src/main/kotlin/routes/Tasks.kt</code>):</p>
 <pre><code class="language-kotlin">// HTMX path (HTTP DELETE)
 delete("/tasks/{id}") {
-    val id = call.parameters["id"]?.toIntOrNull() ?: return@delete call.respond(HttpStatusCode.BadRequest)
-    val task = repo.get(id)
-    repo.delete(id)
+    val id = call.parameters["id"] ?: return@delete call.respond(HttpStatusCode.BadRequest)
+    val task = store.getById(id)
+    store.delete(id)
 
     val status = """&lt;div id="status" hx-swap-oob="true"&gt;Deleted "${task?.title ?: "task"}".&lt;/div&gt;"""
     // Return empty string (outerHTML swap removes the &lt;li&gt;)
@@ -587,8 +632,8 @@ delete("/tasks/{id}") {
 
 // No-JS path (POST fallback)
 post("/tasks/{id}/delete") {
-    val id = call.parameters["id"]?.toIntOrNull() ?: return@post call.respond(HttpStatusCode.BadRequest)
-    repo.delete(id)
+    val id = call.parameters["id"] ?: return@post call.respond(HttpStatusCode.BadRequest)
+    store.delete(id)
     call.respondRedirect("/tasks")
 }
 </code></pre>
